tdf#163194: Make width of comments in margin fixed on print / PDF export

Previously, the width of the comments in margin on print / PDF export
was calculated using the same width factor, as when shown in the UI.
Before commit ac2720dcbe4e51e7f6733a385b5f7b571c6431e9 (tdf#73953 sw:
Allow resizing the comment section, 2024-01-11), there was no way to
change that, and the factor was hardcoded as 1.8 (and the print / PDF
export implementation in SwViewShell::PrintOrPDFExport relied on that).
The mentioned commit introduced a configuration DisplayWidthFactor,
that stored the user-defined width factor; and then in commit
cf9d8631ee5d4b894425446a9e6a8c939ab0309c (Related tdf#73953 Increase
default comment width, 2024-01-11), its default value was increased to
3.0, which immediately affected the width of the comments in print and
PDF output. The new default created comments that were too wide for
the page, even with default DPI.

There was another problem with existing implementation: the comment
width depended on DPI. It meant, that when a HiDPI monotor was used,
the comments printed / exported in margins were narrower, than when
it was done using a standard-DPI monitor. On HiDPI systems, a larger
width factor was necessary to see the "comment doesn't fit into the
page" problem.

Here, the old behavior is restored, where print and PDF output use a
fixed value of the comment width factor. Also, the output width now
doesn't depend on DPI.

Two other possibilities were considered:

1. Keep using user-defined width factor, as in UI, and calculate the
   correct comment position, as well as original page scaling factor,
   to fit them all on the output page;

2. Introduce a new configuration, dedicated for width of comments in
   margins of pages in print / PDF export (and, again, calculate the
   layout using that factor).

They both were rejected, because it doesn't make sense to reduce the
original page size too much. Currently, the original page is reduced
by factor of 0.75, to make room for the comments. Allowing more space
for comments could easily make the page reduced to one quarter of the
original size, or even smaller. And the text of comments will scale
down as well, making it unreadable with too wide comments area.

One problem that required solving was that dynamically changing the
width factor changed sizes of the comments, and that needed to be
restored (otherwise, exporting to PDF would change all UI sizes of
comments). For that, a good guess of the final comment text height
was needed; previously, it worked because comments were re-layouted
several times before they were finally shown, and that compensated
for the incorrect initial height used in SwPostItMgr::LayoutPostIts.
But for print / output, where there is only one layout for output,
and one layout for restoring the size, a new method was introduced
in SwAnnotationWin, GuessTextHeightForWidth.

This restores testTdf152575 to the original state before the commit
cf9d8631ee5d4b894425446a9e6a8c939ab0309c.

Change-Id: Ib0dd195d7594b51be86e489cc06cae00b26bf29b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198457
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198464
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>